src/test/resources/scripts/language/parser/valid/function/rangeArg.sbsc
a = 3;

forEach(a..a+3, (i: int) -> println(str(i)));

return true;