src/test/resources/scripts/language/parser/invalid/coercion/arithmetic/addFunctionDeclared.sbsc
a = (): int -> 4;
3 + a;

return true;